directory structure was modified